--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -23,3 +23,15 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ body {
+  font-family: "Source Sans 3", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+ }
+
+ nav {
+  font-family: "Bungee", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+ }
