--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -30,7 +30,7 @@ body {
   font-style: normal;
  }
 
- nav {
+ nav h1 {
   font-family: "Bungee", sans-serif;
   font-weight: 400;
   font-style: normal;
