--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,13 +1,15 @@
 /* Styling for the Nav bar */
 nav {
+  position: fixed;
+  height: 120px;
+  width: 100%;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
   background-color: #4056A1;
+  color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 120px;
-  padding-left: 1.5em;
-  padding-right: 1.5em;
-  color: white;
 }
 
 nav section {
