--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -28,10 +28,20 @@ body {
   font-family: "Source Sans 3", sans-serif;
   font-weight: 300;
   font-style: normal;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
  }
 
  nav h1 {
   font-family: "Bungee", sans-serif;
   font-weight: 400;
   font-style: normal;
+ }
+
+ main {
+  width: 90%;
+  background-color: #f4f1ec;
+  display: flex;
+  flex-direction: column;
  }
