styling alterations for textarea

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,16 +1,14 @@
 /* Styling for new tweet submission form */
-main form input {
+textarea {
   font-weight: 600;
   width: 100%;
+  resize: none;
   background-color: #f4f1ec;
-  padding-bottom: 0.5em;
-  padding-top: 0.5em;
   border: none;
   border-bottom: 5px solid #535149;
-  box-sizing: border-box;
 }
 
-main form ::placeholder {
+::placeholder {
   color: #535149;
 }
 
@@ -21,7 +19,7 @@ main form div {
   justify-content: space-between;
 }
 
-main form button {
+main button {
   background-color: #4056A1;
   color: white;
 }
