added margin to bottom

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -8,6 +8,10 @@ textarea {
   border-bottom: 5px solid #535149;
 }
 
+.new-tweet {
+  margin-bottom: 50px;
+}
+
 ::placeholder {
   color: #535149;
 }
