--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,16 +1,20 @@
 /* Style sheet for tweet display area */
 article.tweet {
   border: 5px solid;
-  padding: 20px;
+  padding: 10px;
   padding-bottom: 0px;
-  margin-top: 75px;
+  margin-bottom: 30px;
 }
 
 article.tweet header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1em 1em;
+  padding: .5em;
+}
+
+article.tweet img {
+  height: 75px;
 }
 
 article header div {
@@ -20,7 +24,7 @@ article header div {
 
 article.tweet footer {
   border-top: 5px solid;
-  padding: 1em 1.5em;
+  padding: .25em .5em;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -35,7 +39,7 @@ article.tweet .icons {
 
 article.tweet .text {
   font-weight: 400;
-  padding: 1em;
+  padding: .5em;
 }
 
 article.tweet .posted-time {
