--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -40,6 +40,7 @@ article.tweet .icons {
 article.tweet .text {
   font-weight: 400;
   padding: .5em;
+  overflow-wrap: break-word;
 }
 
 article.tweet .posted-time {
@@ -48,10 +49,10 @@ article.tweet .posted-time {
   font-weight: 400;
 }
 
-.shadow {
+article.tweet:hover {
   box-shadow: 7px 7px #96a3d2;
 }
 
-.hover-color {
+.fa-solid:hover {
   color: tan;
 }
