--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -18,6 +18,18 @@ nav section {
   align-items: center;
 }
 
+nav button {
+  background: none;
+  color: white;
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav button:hover {
+  cursor: pointer;
+}
+
 nav div {
   display: flex;
 }
