--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -45,3 +45,16 @@ body {
   display: flex;
   flex-direction: column;
  }
+ 
+ @media only screen and (min-width: 768px) {
+  body {
+    align-items: flex-end;
+  }
+ }
+
+ @media only screen and (min-width: 768px) {
+  main {
+    width: 50%;
+    margin: 120px 50px;
+  }
+ }
