--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -42,7 +42,7 @@ nav p {
   margin: 0;
 }
 
-nav .bold {
+.bold {
   font-weight: 600;
 }
 
@@ -50,4 +50,11 @@ nav i {
   color: red;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
+}
+
+@media only screen and (min-width: 768px) {
+  nav {
+    position: fixed;
+    top: 0px;
+  }
 }
